--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "webpack --config ./config/webpack/development.js --color --progress",
-    "build": "webpack --config ./config/webpack/production.js",
+    "build": "gulp build && webpack --config ./config/webpack/production.js",
     "postinstall": "typings i && gulp build"
   },
   "repository": {
